# Lumenaris

./: .gitignore  CMakeLists.txt  README.md
archive/: 2000cube.cpp  cube_and12cars.cpp  light1-5 7iswrong.cpp  main.cpp  main_multilight_backup.cpp  main_old_architecture.cpp  shader_adjusting.cpp
archive/examples/: new_instanced_rendering.cpp
archive/test/: main_multilight.cpp  test_release_mode.cpp
assets/shader/: ambient_ibl.frag  ambient_ibl.vert  basic.frag  basic.vert  debug.frag  debug.vert  debug_solid.frag  ink.frag  instanced.frag  instanced.vert  multi_light.frag  multi_light.vert  pixelnoise.frag  simple.frag  skybox.frag  skybox.vert  skybox_reflection.frag  skybox_reflection.vert
assets/shader/storage/: glass.frag  ink.frag  neon.frag  phrone.frag  pixelnoise.frag  randomnoise.frag  sketch.frag  toon.frag
docs/: ARCHITECTURE.md  ARCHITECTURE_DESIGN.md  BUILD_GUIDE.md  CAMERA_REFACTOR.md  COMPILATION_FIX.md  FPS_PERFORMANCE_ANALYSIS.md  IMGUI_2D_INTEGRATION_ANALYSIS.md  INSTANCED_RENDERING_GUIDE.md  INSTANCE_DATA_MOVE_SEMANTICS_FIX.md  INTERFACES.md  LIGHTING_IMPLEMENTATION.md  LIGHTING_SYSTEM.md  LIGHT_LIMIT_FIX.md  MESHBUFFER_PERFORMANCE_OPTIMIZATION.md  MESHBUFFER_USAGE.md  MIGRATION_GUIDE.md  MULTILIGHT_DEMO.md  OBJMODEL_REFACTOR_PLAN.md  OBJMODEL_STATIC_2026.md  OPTIMIZATION_GUIDE.md  PERFORMANCE_ANALYSIS_AFTER_REFACTOR.md  PERFORMANCE_ANALYSIS_COMPREHENSIVE_2026.md  PERFORMANCE_OPTIMIZATION_DETAILED.md  PERFORMANCE_QUICK_REFERENCE_2026.md  README.md  REFACTOR_DEPENDENCY_GRAPH.md  REFACTOR_PLAN.md  REFACTOR_SUMMARY.md  RENAME_TO_LUMENARIS.md  SCENES_COMPARISON.md  SUPER_DISCO_UPGRADE.md  TINYOBJ_API_REFERENCE.md  TODO.md
docs/fixs/: COOL_CUBES_DEMO.md  DISCO_STAGE_IMPLEMENTATION.md  FPS_OPTIMIZATION_SUMMARY.md  INSTANCED_RENDERING_GUIDE.md  MAIN_CPP_COMPILATION_FIX.md  MULTILIGHT_UPDATE.md  NEW_ARCHITECTURE.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  QUICK_START.md  REFACTOR_COMPLETE.md  REFACTOR_COMPLETED.md  REFACTOR_QUICK_GUIDE.md  RENDERING_DEBUG_GUIDE.md  RENDERING_FIX_APPLIED.md  SCENE_2_RENDERING_FIX.md  SHARED_PTR_USAGE_SUMMARY.md  SIMPLEMESH_REFACTOR.md  UNIFORM_BUG_FIX.md  UNIFORM_BUG_FIX_SUMMARY.md
docs/interfaces/: INTERFACES.md  LIGHTING_INTERFACES.md
examples/: ambient_ibl_demo.cpp  skybox_demo_simple.cpp
include/Core/: Camera.hpp  GLM.hpp  KeyboardController.hpp  Logger.hpp  MathTypes.hpp  MouseController.hpp  Types.hpp  Window.hpp
include/Renderer/: Cube.hpp  Geometry.hpp  IRenderer.hpp  InstancedMesh.hpp  InstancedRenderer.hpp  Mesh.hpp  MeshBuffer.hpp  MeshData.hpp  MeshDataFactory.hpp  OBJLoader.hpp  OBJModel.hpp  Shader.hpp  SimpleMesh.hpp  Sphere.hpp
include/Renderer/Core/: RenderContext.hpp
include/Renderer/Data/: InstanceData.hpp  MeshBuffer.hpp  MeshData.hpp
include/Renderer/Environment/: AmbientLighting.hpp  Skybox.hpp  SkyboxLoader.hpp
include/Renderer/Factory/: MeshDataFactory.hpp
include/Renderer/Geometry/: Cube.hpp  Mesh.hpp  OBJModel.hpp  Plane.hpp  Sphere.hpp  Torus.hpp
include/Renderer/Lighting/: Light.hpp  LightManager.hpp
include/Renderer/Renderer/: InstancedRenderer.hpp
include/Renderer/Resources/: OBJLoader.hpp  Shader.hpp  Texture.hpp  TextureUnits.hpp
include/glad/: glad.h
src/: glad.c  main.cpp
src/Core/: Camera.cpp  KeyboardController.cpp  Logger.cpp  MouseController.cpp  Window.cpp
src/Renderer/: Cube.cpp  Geometry.cpp  InstanceData.cpp  InstancedMesh.cpp  InstancedRenderer.cpp  Mesh.cpp  MeshBuffer.cpp  MeshData.cpp  MeshDataFactory.cpp  OBJLoader.cpp  OBJModel.cpp  Shader.cpp  Shader.hpp  SimpleMesh.cpp  Sphere.cpp  Texture.cpp
src/Renderer/Core/: RenderContext.cpp
src/Renderer/Data/: InstanceData.cpp  MeshBuffer.cpp  MeshData.cpp
src/Renderer/Environment/: AmbientLighting.cpp  Skybox.cpp  SkyboxLoader.cpp
src/Renderer/Factory/: MeshDataFactory.cpp
src/Renderer/Geometry/: Cube.cpp  Mesh.cpp  OBJModel.cpp  Plane.cpp  Sphere.cpp  Torus.cpp
src/Renderer/Lighting/: Light.cpp  LightManager.cpp
src/Renderer/Renderer/: InstancedRenderer.cpp
src/Renderer/Resources/: OBJLoader.cpp  Shader.cpp  Texture.cpp
test/: test_3c_logger.cpp  test_car_renderbatch.cpp  test_car_renderbatch_simple.cpp  test_instanced_rendering.cpp  test_logger.cpp  test_performance_optimization.cpp
